--- a/islam.html
+++ b/islam.html
@@ -19,7 +19,7 @@
     function performSearch() {
       var searchQuery = document.getElementById('searchQuery').value;
       var cx = '31963fb4fa8a8465d'; // Replace with your CSE ID
-      var apiKey = 'AIzaSyCT4AQmomic99UmrH-SPepGcKqT9j81I0A'; // Replace with your API key
+      var apiKey = ''; // Replace with your API key
       var sites = [
         'darulifta-deoband.com',
         'almuftionline.com',
